tests/src/Loader/classloader/generics/Instantiation/Positive/MultipleInterface07.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Positive_MultipleInterface07_MultipleInterface07_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Positive_MultipleInterface07_MultipleInterface07_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Positive\\MultipleInterface07\\MultipleInterface07.cmd");
        }
    }
}
