tests/src/Loader/classloader/generics/Instantiation/Negative/abstract04.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_abstract04_abstract04_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract04_abstract04_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract04\\abstract04.cmd");
        }
    }
}
